fix sync lobby game
